# uvent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
.github/workflows/: build.yml  docs.yaml
cmake/: uventConfig.cmake.in
docs/: async-mutex.md  awaitable.md  awaitable_frame.md  contributing.md  getting-started.md  index.md  quick-start.md  settings.md  socket.md  synchronization.md  system_primitives.md  timers.md  uvent.md
docs/channels/: channels.md  examples.md  select.md
examples/: main.cpp  main_channels_example.cpp  main_select_example.cpp  main_timers.cpp
include/uvent/: Uvent.h
include/uvent/base/: Predefines.h
include/uvent/net/: AwaiterOperations.h  Socket.h  SocketBSD.h  SocketLinux.h  SocketLinuxIOUring.h  SocketMetadata.h  SocketWindows.h
include/uvent/poll/: EPoller.h  IOCPPoller.h  IOUringPoller.h  IocpPoller.h  KPoller.h  PollerBase.h
include/uvent/pool/: TLS.h  TLSRegistry.h  ThreadPool.h
include/uvent/sync/: AsyncBarrier.h  AsyncCancellation.h  AsyncChannel.h  AsyncEvent.h  AsyncMutex.h  AsyncSemaphore.h  AsyncWaitGroup.h  SyncCommon.h
include/uvent/system/: Defines.h  Settings.h  SystemContext.h  Thread.h
include/uvent/tasks/: Awaitable.h  AwaitableFrame.h  SharedTasks.h
include/uvent/utils/buffer/: DynamicBuffer.h
include/uvent/utils/datastructures/: DataStructuresMetadata.h
include/uvent/utils/datastructures/array/: ConcurrentVector.h  ShardedConcurrentVector.h
include/uvent/utils/datastructures/queue/: ConcurrentQueues.h  FastQueue.h
include/uvent/utils/errors/: IOErrors.h
include/uvent/utils/intrinsincs/: optimizations.h
include/uvent/utils/net/: net.h  socket.h
include/uvent/utils/sync/: QSBR.h  RefCountedSession.h  TaggedPtr.h
include/uvent/utils/thread/: ThreadStats.h
include/uvent/utils/timer/: HighPerfomanceTimer.h  Timer.h  TimerWheel.h
src/: Uvent.cpp
src/net/: AwaiterOperations.cpp  Socket.cpp  SocketBSD.cpp  SocketLinux.cpp  SocketLinuxIOUring.cpp  SocketMetadata.cpp  SocketWindows.cpp
src/poll/: EPoller.cpp  IOCPPoller.cpp  IOUringPoller.cpp  IocpPoller.cpp  KPoller.cpp  PollerBase.cpp
src/pool/: TLS.cpp  TLSRegistry.cpp  ThreadPool.cpp
src/sync/: AsyncMutex.cpp
src/system/: Defines.cpp  Settings.cpp  SystemContext.cpp  Thread.cpp
src/tasks/: Awaitable.cpp  AwaitableFrame.cpp  SharedTasks.cpp
src/utils/buffer/: DynamicBuffer.cpp
src/utils/datastructures/queue/: ConcurrentQueues.cpp  FastQueue.cpp
src/utils/errors/: IOErrors.cpp
src/utils/net/: socket.cpp
src/utils/sync/: QSBR.cpp  RefCountedSession.cpp
src/utils/thread/: ThreadStats.cpp
src/utils/timer/: HighPerfomanceTimer.cpp  Timer.cpp  TimerWheel.cpp
